dnl autoconf script for Zia httpd server
dnl process with autoconf in order to get configure script
dnl or use autogen.sh (recommended)

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(Zia, 0.1.5)
#AC_CONFIG_HEADERS(config.h)

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_PROG_CXXCPP
AC_PROG_CXX
AC_PROG_MAKE_SET

AM_PROG_CC_STDC

AC_PROG_INSTALL

dnl We need to write some rules to check stl classes.
dnl    pthreads, libxml++ (or embbed it into src tree)

AC_CHECK_HEADERS([pthread.h])
AC_CHECK_HEADERS([iostream, vector, list])


dnl libxml++ checks
PKG_CHECK_MODULES(LIBXML, libxml++-2.6 >= 2.10.0)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXML_LIBS)


dnl Check for perl && perl embedding capabilities
AC_PROG_PERL
AC_EMBED_PERL

AC_SUBST(PERL_CCOPTS)
AC_SUBST(PERL_LDOPTS)

dnl AB_PERL_CHECK(5.8.8)
dnl AB_PROG_PERL
dnl AB_CHECK_EMBEDDED_PERL

case $MACHTYPE in
  *-*-msdos* | *-*-go32* | *-*-mingw32* | *-*-msys* | *-*-windows*)
    AC_DEFINE(WIN_32)
    ARCH_CFLAGS=""
    ARCH_LDADD=" -lws2_32 "
    AC_SUBST(ARCH_CFLAGS)
    AC_SUBST(ARCH_LDADD)
    ;;
  *)
    AC_DEFINE(XNIX)
    ARCH_CFLAGS=""
    ARCH_LDADD=" -ldl "
    AC_SUBST(ARCH_CFLAGS)
    AC_SUBST(ARCH_LDADD)
    ;;
esac

dnl Autoheader things :p


AC_OUTPUT([
Makefile
src/Makefile
conf/Makefile
src/psp/Makefile
src/modtest/Makefile
])
